--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -18,3 +18,6 @@ body :not(pre) > code[class*="language-"],
 body pre[class*="language-"] {
   @apply bg-gray-800;
 }
+.navbar .logo {
+  max-height: 2em;
+}
