--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -18,6 +18,23 @@ body :not(pre) > code[class*="language-"],
 body pre[class*="language-"] {
   @apply bg-gray-800;
 }
+
+.address {
+  white-space: pre-line;
+  text-align: center;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    @apply bg-gradient-to-b from-gray-900 via-gray-900 to-gray-800;
+    color: #dcb;
+  }
+
+  * {
+    border-color: #444;
+  }
+}
+
 .navbar .logo {
   max-height: 2em;
 }
