--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -15,12 +15,27 @@
     {% if prism == true %}
       <link rel="stylesheet" type="text/css" href="/static/css/prism-tomorrow.css">
     {% endif %}
+
+    <meta property="og:url" content="https://focusphc.com/">
+    <meta property="og:site_name" content="Focus Pregnancy Help Center">
+    <meta property="og:title" content="Welcome to Focus Pregnancy Help Center 135 University Ave Rochester, NY">
+    <meta property="og:description" content="Helping women and families who are pregnant, parenting or in need of assistance.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="{{ social_image_url }}">
+    <meta property="og:locale" content="en_US">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Focus Pregnancy Help Center">
+    <meta name="twitter:description" content="Welcome to Focus Pregnancy Help Center 135 University Ave Rochester, NY">
+    <meta name="twitter:image" content="{{ social_image_url }}">
+    <meta name="twitter:image:alt" content="Focus Pregnancy Help Center">
   </head>
   <body>
     {% include "./partials/navbar.html" %}
+    <div class="container mx-auto">
 
     {{ content | safe }}
 
+    </div>
     {% include "./partials/footer.html" %}
 
     <script src="/static/js/alpine.js"></script>
