Minimum Viable Website?

--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -30,8 +30,8 @@
     <meta name="twitter:image:alt" content="Focus Pregnancy Help Center">
   </head>
   <body>
-    {% include "./partials/navbar.html" %}
-    <div class="container mx-auto">
+    {# include "./partials/navbar.html" #}
+    <div class="container mx-auto min-h-screen">
 
     {{ content | safe }}
 
